use kebab-case in translations and remove unused translations

--- a/app/components/administrative-body-select.hbs
+++ b/app/components/administrative-body-select.hbs
@@ -1,6 +1,6 @@
 <div class={{if @error "ember-power-select--error"}}>
   <PowerSelect
-    @placeholder={{t "manageZittingsData.selectPlaceholder"}}
+    @placeholder={{t "manage-zittings-data.select-placeholder"}}
     @selected={{@selected}}
     @options={{this.administrativeBodyOptions}}
     @onChange={{@onChange}}
