--- a/app/components/agenda-manager/agenda-item-form/select-location.hbs
+++ b/app/components/agenda-manager/agenda-item-form/select-location.hbs
@@ -6,7 +6,7 @@
     <div class="au-o-grid__item au-u-1-2">
       <PowerSelect
         @renderInPlace={{true}}
-        @placeholder={{t "manageAgendaZittingModalMove.positionSelectPlaceholder"}}
+        @placeholder={{t "manage-agenda-zitting-modal-move.position-select-placeholder"}}
         @options={{this.locationOptions}}
         @verticalPosition="above"
         @selected={{this.selectedLocation}}
@@ -20,9 +20,9 @@
       <div class="au-o-grid__item au-u-1-2">
         <PowerSelect
           @renderInPlace={{true}}
-          @placeholder={{t "manageAgendaZittingModalMove.agendapuntSelectPlaceholder"}}
+          @placeholder={{t "manage-agenda-zitting-modal-move.agendapunt-select-placeholder"}}
           @searchEnabled={{true}}
-          @searchPlaceholder={{t "manageAgendaZittingModalMove.searchPlaceholder"}}
+          @searchPlaceholder={{t "manage-agenda-zitting-modal-move.search-placeholder"}}
           @verticalPosition="above"
           @options={{this.afterItemOptions}}
           @selected={{this.selectedAfterItem}}
