--- a/app/components/delete-meeting.hbs
+++ b/app/components/delete-meeting.hbs
@@ -5,14 +5,14 @@
   </AuButton>
   {{#if this.displayDeleteModal}}
     <AuModal
-      @modalTitle={{t "meetings.delete.confirmMessage"}}
+      @modalTitle={{t "meetings.delete.confirm-message"}}
       @modalOpen={{this.displayDeleteModal}}
       @closeModal={{fn (mut this.displayDeleteModal) false}} as |Modal| >
       <Modal.Body>
         <p>{{t "meetings.delete.warning"}}</p>
       </Modal.Body>
       <Modal.Footer>
-        <AuButton @disabled={{this.deleteMeeting.isRunning}} @alert={{true}} {{on "click" (perform this.deleteMeeting)}}>{{t "meetings.delete.confirmButton"}}</AuButton>
+        <AuButton @disabled={{this.deleteMeeting.isRunning}} @alert={{true}} {{on "click" (perform this.deleteMeeting)}}>{{t "meetings.delete.confirm-button"}}</AuButton>
         <AuButton @loading={{this.deleteMeeting.isRunning}} @disabled={{this.deleteMeeting.isRunning}} @skin="secondary" {{on "click" (fn (mut this.displayDeleteModal) false)}}>{{t "meetings.delete.back"}}</AuButton>
       </Modal.Footer>
     </AuModal>
