--- a/app/components/editor-document-title.hbs
+++ b/app/components/editor-document-title.hbs
@@ -12,7 +12,7 @@
           </AuLabel>
             <input
               class="au-c-app-chrome__title-input {{if this.error "au-c-input--error"}}"
-              placeholder={{t "editorDocumentTitle.placeholder"}}
+              placeholder={{t "editor-document-title.placeholder"}}
               id={{id}}
               type="text"
               value={{this.title}}
