--- a/app/components/editor-plugins/regulatory-statements/sidebar-insert.hbs
+++ b/app/components/editor-plugins/regulatory-statements/sidebar-insert.hbs
@@ -1,6 +1,6 @@
 <AuList::Item>
   <AuButton @icon="add" @iconAlignment="left" @skin="link" {{on 'click' this.toggleModal}} @disabled={{this.isDisabled}}>
-    {{t "regulatoryStatementsPlugin.insertStatement"}}
+    {{t "regulatory-statements-plugin.insert-statement"}}
   </AuButton>
 </AuList::Item>
 {{#if this.modalEnabled}}
