--- a/app/components/editor-status-pill.hbs
+++ b/app/components/editor-status-pill.hbs
@@ -2,6 +2,6 @@
   {{#if @status.label}}
     {{capitalize @status.label}}
   {{else}}
-    {{t "editorStatusPill.defaultStatus"}}
+    {{t "editor-status-pill.default-status"}}
   {{/if}}
 </AuPill>
