--- a/app/components/linked-agendapoints-button.hbs
+++ b/app/components/linked-agendapoints-button.hbs
@@ -2,7 +2,7 @@
 <AuButton 
   {{on "click" this.openModal}} 
   @skin="link">
-  {{t "inbox.regulatoryStatements.linkedAgendapoints.buttonLabel"}}
+  {{t "inbox.regulatory-statements.linked-agendapoints.button-label"}}
   ({{this.agendapoints.records.meta.count}})
 </AuButton>
 <LinkedAgendapointsModal 
