--- a/app/components/participation-list/functionaris-selector.hbs
+++ b/app/components/participation-list/functionaris-selector.hbs
@@ -1,5 +1,5 @@
 {{#if this.loadData.isRunning}}
-  <p class="loader"><span class="u-visually-hidden">{{t "participationList.loadingTitle"}}</span></p>
+  <p class="loader"><span class="u-visually-hidden">{{t "participation-list.loading-title"}}</span></p>
 {{else}}
   <PowerSelect
     @options={{this.options}}
