--- a/app/components/participation-list/mandataris-row.hbs
+++ b/app/components/participation-list/mandataris-row.hbs
@@ -6,7 +6,7 @@
     <label class="checkbox checkbox--block">
       <input class="checkbox__toggle" type="checkbox" checked={{@selected}} {{on "input" (fn @toggle @mandataris @selected)}} disabled={{@disabled}} />
       <span></span>
-      <strong>{{t "participationListModalTable.checkboxLabel"}}</strong>
+      <strong>{{t "participation-list-modal-table.checkbox-label"}}</strong>
     </label>
   </td>
 </tr>
