--- a/app/components/participation-list/mandataris-selector.hbs
+++ b/app/components/participation-list/mandataris-selector.hbs
@@ -1,10 +1,10 @@
 <PowerSelect
-  @loadingMessage={{t "participationListModalSelector.loadingMessage"}}
-  @noMatchesMessage={{t "participationListModalSelector.noMatchesMessage"}}
+  @loadingMessage={{t "participation-list-modal-selector.loading-message"}}
+  @noMatchesMessage={{t "participation-list-modal-selector.no-matches-message"}}
   @searchEnabled={{true}}
-  @searchMessage={{t "participationListModalSelector.searchMessage"}}
+  @searchMessage={{t "participation-list-modal-selector.search-message"}}
   @renderInPlace={{true}}
-  @placeholder={{t "participationListModalSelector.placeholder"}}
+  @placeholder={{t "participation-list-modal-selector.placeholder"}}
   @allowClear={{true}}
   @search={{perform this.searchByName}}
   @selected={{@mandataris}}
