--- a/app/components/participation-list/mandatarissen-table.hbs
+++ b/app/components/participation-list/mandatarissen-table.hbs
@@ -1,13 +1,13 @@
 <table class="au-c-table-border">
   <thead>
     <tr>
-      <th>{{t "participationListModalTable.naamLabel"}}</th>
-      <th>{{t "participationListModalTable.functieLabel"}}</th>
-      <th>{{t "participationListModalTable.geboortedatumLabel"}}</th>
+      <th>{{t "participation-list-modal-table.naam-label"}}</th>
+      <th>{{t "participation-list-modal-table.functie-label"}}</th>
+      <th>{{t "participation-list-modal-table.geboortedatum-label"}}</th>
       <th>
         <div class="grid">
           <div class="col--4-12">
-            {{t "participationListModalTable.actieLabel"}}
+            {{t "participation-list-modal-table.actie-label"}}
           </div>
         </div>
       </th>
