--- a/app/components/publication-signatures.hbs
+++ b/app/components/publication-signatures.hbs
@@ -1,6 +1,6 @@
 <AuToolbar @nowrap={{true}} @border="bottom" class="au-u-padding-bottom-tiny au-u-margin-bottom-small" as |Group|>
   <Group>
-    <AuHeading @level="2" @skin="4">{{concat (t "timelineStep.signStepTitle") @name}}</AuHeading>
+    <AuHeading @level="2" @skin="4">{{concat (t "timeline-step.sign-step-title") @name}}</AuHeading>
     <AuPill @skin={{this.statusSkin}} class="au-u-margin-left">
       {{this.statusLabel}}
     </AuPill>
@@ -11,23 +11,23 @@
     {{#each @signatures as |signature index|}}
       {{#if (eq index 0)}}
         <div class="au-o-grid__item au-u-1-2@medium au-u-padding-bottom-none au-u-padding-bottom-small">
-          <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timelineStep.firstSignature"}}</AuHeading>
+          <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timeline-step.first-signature"}}</AuHeading>
           <Signatures::SignedResource @signature={{signature}} />
         </div>
       {{else}}
         <div class="au-o-grid__item au-u-1-2@medium au-u-padding-bottom-none au-u-padding-bottom-small">
-          <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timelineStep.secondSignature"}}</AuHeading>
+          <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timeline-step.second-signature"}}</AuHeading>
           <Signatures::SignedResource @signature={{signature}} />
         </div>
       {{/if}}
     {{/each}}
   {{else if (eq @signatures.length 1)}}
     <div class="au-o-grid__item au-u-1-2@medium au-u-padding-top-none au-u-padding-bottom-small">
-      <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timelineStep.firstSignature"}}</AuHeading>
+      <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timeline-step.first-signature"}}</AuHeading>
       <Signatures::SignedResource @signature={{@signatures.firstObject}} />
     </div>
     <div class="au-o-grid__item au-u-1-2@medium au-u-padding-top-none au-u-padding-bottom-small">
-      <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timelineStep.secondSignature"}}</AuHeading>
+      <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timeline-step.second-signature"}}</AuHeading>
       <AuButton
         {{on "click" @sign}}
         @skin="secondary"
@@ -36,25 +36,25 @@
         @loading={{@loading}}
         @disabled={{or (not this.currentSession.canSign) this.isSignedByCurrentUser}}
       >
-        {{t "timelineStep.signButtonLabel" name=@name}}
+        {{t "timeline-step.sign-button-label" name=@name}}
       </AuButton>
     </div>
     <div class="au-o-grid__item au-u-padding-top-none au-u-padding-bottom-none">
       <AuHelpText @skin="secondary" class="au-u-margin-top-none">
-        {{t "timelineStep.signingRestrictionInfo"}}
+        {{t "timeline-step.signing-restriction-info"}}
         <a
           href="{{config "manual.baseUrl"}}{{config "manual.signee"}}"
           target="_blank"
           rel="noopener noreferrer"
           class="au-c-link">
-          {{t "timelineStep.signingRestrictionRole"}}
+          {{t "timeline-step.signing-restriction-role"}}
         </a>
-        {{t "timelineStep.signingRestrictionEnd"}}
+        {{t "timeline-step.signing-restriction-end"}}
       </AuHelpText>
     </div>
   {{else}} {{!-- No signatures placed --}}
     <div class="au-o-grid__item au-u-1-2@medium au-u-padding-top-none au-u-padding-bottom-small">
-      <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timelineStep.firstSignature"}}</AuHeading>
+      <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timeline-step.first-signature"}}</AuHeading>
       <AuButton
         {{on "click" @sign}}
         @skin="secondary"
@@ -63,11 +63,11 @@
         @loading={{@loading}}
         @disabled={{not this.currentSession.canSign}}
       >
-        {{t "timelineStep.signButtonLabel" name=@name}}
+        {{t "timeline-step.sign-button-label" name=@name}}
       </AuButton>
     </div>
     <div class="au-o-grid__item au-u-1-2@medium au-u-padding-top-none au-u-padding-bottom-small">
-      <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timelineStep.secondSignature"}}</AuHeading>
+      <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timeline-step.second-signature"}}</AuHeading>
       <AuButton
         {{on "click" @sign}}
         @skin="secondary"
@@ -75,20 +75,20 @@
         @iconAlignment="left"
         @disabled={{true}}
       >
-        {{t "timelineStep.signButtonLabel" name=@name}}
+        {{t "timeline-step.sign-button-label" name=@name}}
       </AuButton>
     </div>
     <div class="au-o-grid__item au-u-padding-top-none au-u-padding-bottom-none">
       <AuHelpText @skin="secondary" class="au-u-margin-top-none">
-        {{t "timelineStep.signingRestrictionInfo"}}
+        {{t "timeline-step.signing-restriction-info"}}
         <a
           href="{{config "manual.baseUrl"}}{{config "manual.signee"}}"
           target="_blank"
           rel="noopener noreferrer"
           class="au-c-link">
-          {{t "timelineStep.signingRestrictionRole"}}
+          {{t "timeline-step.signing-restriction-role"}}
         </a>
-        {{t "timelineStep.signingRestrictionEnd"}}
+        {{t "timeline-step.signing-restriction-end"}}
       </AuHelpText>
     </div>
   {{/if}}
