--- a/app/components/rdfa-editor-container.hbs
+++ b/app/components/rdfa-editor-container.hbs
@@ -9,7 +9,7 @@
                 <div class="au-c-scanner__text">
                   <AuLoader @padding="small"/>
                   <AuHelpText @size="large">{{if @busyText @busyText
-                                                 (t "rdfaEditorContainer.defaultBusyText") }}
+                                                 (t "rdfa-editor-container.default-busy-text") }}
                   </AuHelpText>
                 </div>
                 <span class="au-c-scanner__bar"></span>
