--- a/app/components/signatures/timeline-step.hbs
+++ b/app/components/signatures/timeline-step.hbs
@@ -30,7 +30,7 @@
       {{/if}}
     </div>
     {{#if (and @errors @errors.length)}}
-      <AuAlert @icon="alert-triangle" @title={{t "timelineStep.publishWarning"}} @skin="error">
+      <AuAlert @icon="alert-triangle" @title={{t "timeline-step.publish-warning"}} @skin="error">
         <ul>
         {{#each @errors as |error|}}
           <li>{{error}}</li>
@@ -41,7 +41,7 @@
       {{!-- Sign --}}
       <AuToolbar @nowrap={{true}} @border="bottom" class="au-u-padding-bottom-tiny au-u-margin-bottom-small"  as |Group|>
         <Group>
-          <AuHeading @level="2" @skin="4" class="au-u-word-break-all">{{concat (t "timelineStep.signStepTitle") @name}}</AuHeading>
+          <AuHeading @level="2" @skin="4" class="au-u-word-break-all">{{concat (t "timeline-step.sign-step-title") @name}}</AuHeading>
         </Group>
         <Group>
           <AuPill @skin={{this.handtekeningStatus.color}} class="au-u-margin-left">
@@ -54,23 +54,23 @@
           {{#each @signedResources as |signature index|}}
             {{#if (eq index 0)}}
               <div class="au-o-grid__item au-u-1-2@medium au-u-padding-bottom-none au-u-padding-bottom-small">
-                <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timelineStep.firstSignature"}}</AuHeading>
+                <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timeline-step.first-signature"}}</AuHeading>
                 <Signatures::SignedResource @signature={{signature}} />
               </div>
             {{else}}
               <div class="au-o-grid__item au-u-1-2@medium au-u-padding-bottom-none au-u-padding-bottom-small">
-                <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timelineStep.secondSignature"}}</AuHeading>
+                <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timeline-step.second-signature"}}</AuHeading>
                 <Signatures::SignedResource @signature={{signature}} />
               </div>
             {{/if}}
           {{/each}}
         {{else if (eq this.signaturesCount 1)}}
           <div class="au-o-grid__item au-u-1-2@medium au-u-padding-top-none au-u-padding-bottom-small">
-            <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timelineStep.firstSignature"}}</AuHeading>
+            <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timeline-step.first-signature"}}</AuHeading>
             <Signatures::SignedResource @signature={{@signedResources.firstObject}} />
           </div>
           <div class="au-o-grid__item au-u-1-2@medium au-u-padding-top-none au-u-padding-bottom-small">
-            <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timelineStep.secondSignature"}}</AuHeading>
+            <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timeline-step.second-signature"}}</AuHeading>
             <AuButton
               {{on "click" (fn (mut this.showSigningModal) true)}}
               @skin="secondary"
@@ -79,25 +79,25 @@
               @loading={{this.signDocument.isRunning}}
               @disabled={{or (or (not this.currentSession.canSign) this.signDocument.isRunning) this.isSignedByCurrentUser}}
             >
-              {{t "timelineStep.signButtonLabel" name=(limit-content @name 30)}}
+              {{t "timeline-step.sign-button-label" name=(limit-content @name 30)}}
             </AuButton>
           </div>
           <div class="au-o-grid__item au-u-padding-top-none au-u-padding-bottom-none">
             <AuHelpText @skin="secondary" class="au-u-margin-top-none">
-            {{t "timelineStep.signingRestrictionInfo"}}
+            {{t "timeline-step.signing-restriction-info"}}
               <a
                 href="{{config "manual.baseUrl"}}{{config "manual.signee"}}"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="au-c-link">
-                  {{t "timelineStep.signingRestrictionRole"}}
+                  {{t "timeline-step.signing-restriction-role"}}
               </a>
-              {{t "timelineStep.signingRestrictionEnd"}}
+              {{t "timeline-step.signing-restriction-end"}}
             </AuHelpText>
           </div>
         {{else}} {{!-- No signatures placed --}}
           <div class="au-o-grid__item au-u-1-2@medium au-u-padding-top-none au-u-padding-bottom-small">
-            <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timelineStep.firstSignature"}}</AuHeading>
+            <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timeline-step.first-signature"}}</AuHeading>
             <AuButton
               {{on "click" (fn (mut this.showSigningModal) true)}}
               @skin="secondary"
@@ -106,11 +106,11 @@
               @loading={{this.signDocument.isRunning}}
               @disabled={{or (not this.currentSession.canSign) this.signDocument.isRunning}}
             >
-              {{t "timelineStep.signButtonLabel" name=(limit-content @name 30)}}
+              {{t "timeline-step.sign-button-label" name=(limit-content @name 30)}}
             </AuButton>
           </div>
           <div class="au-o-grid__item au-u-1-2@medium au-u-padding-top-none au-u-padding-bottom-small">
-            <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timelineStep.secondSignature"}}</AuHeading>
+            <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timeline-step.second-signature"}}</AuHeading>
             <AuButton
               {{on "click" (fn (mut this.showSigningModal) true)}}
               @skin="secondary"
@@ -118,20 +118,20 @@
               @iconAlignment="left"
               @disabled={{true}}
             >
-              {{t "timelineStep.signButtonLabel" name=(limit-content @name 30)}}
+              {{t "timeline-step.sign-button-label" name=(limit-content @name 30)}}
             </AuButton>
           </div>
           <div class="au-o-grid__item au-u-padding-top-none au-u-padding-bottom-none">
             <AuHelpText @skin="secondary" class="au-u-margin-top-none">
-            {{t "timelineStep.signingRestrictionInfo"}}
+            {{t "timeline-step.signing-restriction-info"}}
               <a
                 href="{{config "manual.baseUrl"}}{{config "manual.signee"}}"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="au-c-link">
-                  {{t "timelineStep.signingRestrictionRole"}}
+                  {{t "timeline-step.signing-restriction-role"}}
               </a>
-              {{t "timelineStep.signingRestrictionEnd"}}
+              {{t "timeline-step.signing-restriction-end"}}
             </AuHelpText>
           </div>
         {{/if}}
@@ -147,12 +147,12 @@
       {{#if this.canPrint}}
       <AuToolbar @nowrap={{true}} @border="bottom" class="au-u-padding-bottom-tiny au-u-margin-bottom-small" as |Group|>
         <Group>
-          <AuHeading @level="2" @skin="4" class="au-u-word-break-all">{{t "timelineStep.printButtonLabel" name=@name}}</AuHeading>
+          <AuHeading @level="2" @skin="4" class="au-u-word-break-all">{{t "timeline-step.print-button-label" name=@name}}</AuHeading>
         </Group>
       </AuToolbar>
       <div class="au-u-margin-top-none au-u-margin-bottom-large">
         <AuButton {{ on 'click' @print }} >
-          {{t "timelineStep.printButtonLabel" name=(limit-content @name 60)}}
+          {{t "timeline-step.print-button-label" name=(limit-content @name 60)}}
         </AuButton>
       </div>
       {{/if}}
@@ -160,7 +160,7 @@
       {{!-- Publish --}}
       <AuToolbar @nowrap={{true}} @border="bottom" class="au-u-padding-bottom-tiny au-u-margin-bottom-small" as |Group|>
         <Group>
-          <AuHeading @level="2" @skin="4" class="au-u-word-break-all">{{t "timelineStep.publishButtonLabel" name=@name}}</AuHeading>
+          <AuHeading @level="2" @skin="4" class="au-u-word-break-all">{{t "timeline-step.publish-button-label" name=@name}}</AuHeading>
         </Group>
         <Group>
           <AuPill @skin={{if @publishedResource "success"}} class="au-u-margin-left">
@@ -174,7 +174,7 @@
           <Signatures::PublishedResource @publication={{@publishedResource}} />
         </div>
         <div class="au-o-grid__item au-u-1-2@medium au-u-padding-top-none">
-          <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timelineStep.linkPublish"}}</AuHeading>
+          <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timeline-step.link-publish"}}</AuHeading>
           <p>
             <a href="{{this.publicationBaseUrl}}{{this.bestuurseenheid.naam}}/{{this.bestuurseenheid.classificatie.label}}"
               target="_blank"
@@ -183,9 +183,9 @@
               {{this.publicationBaseUrl}}{{this.bestuurseenheid.naam}}/{{this.bestuurseenheid.classificatie.label}}
             </a>
           </p>
-          <AuHelpText @skin="secondary" class="au-u-margin-bottom-small">{{t "timelineStep.timingWarning"}}</AuHelpText>
-          <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timelineStep.publicationType"}}</AuHeading>
-          <p>{{t "timelineStep.publicForAll"}}</p>
+          <AuHelpText @skin="secondary" class="au-u-margin-bottom-small">{{t "timeline-step.timing-warning"}}</AuHelpText>
+          <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timeline-step.publication-type"}}</AuHeading>
+          <p>{{t "timeline-step.public-for-all"}}</p>
         </div>
         {{else}}
         <div class="au-o-grid__item au-u-padding-top-none">
@@ -197,7 +197,7 @@
               @loading={{this.publishDocument.isRunning}}
               @disabled={{or (not this.currentSession.canPublish) this.publishDocument.isRunning}}
             >
-              {{t "timelineStep.publishButtonLabel" name=(limit-content @name 60)}}
+              {{t "timeline-step.publish-button-label" name=(limit-content @name 60)}}
             </AuButton>
           {{else}}
             <AuButton
@@ -207,29 +207,29 @@
               @loading={{this.publishDocument.isRunning}}
               @disabled={{or (not this.currentSession.canPublish) this.publishDocument.isRunning}}
             >
-              {{t "timelineStep.publishNotifyButtonLabel" name=(limit-content @name 60)}}
+              {{t "timeline-step.publish-notify-button-label" name=(limit-content @name 60)}}
             </AuButton>
           {{/if}}
 
           <AuHelpText @skin="secondary" class="au-u-margin-top-small">
-            {{t "timelineStep.publishRestrictionInfo"}}
+            {{t "timeline-step.publish-restriction-info"}}
             <a
               href="{{config "manual.baseUrl"}}{{config "manual.publisher"}}"
               target="_blank"
               rel="noopener noreferrer"
               class="au-c-link">
-              {{t "timelineStep.publishRestrictionRole"}}
+              {{t "timeline-step.publish-restriction-role"}}
             </a>
-            {{t "timelineStep.publishRestrictionEnd"}}
+            {{t "timeline-step.publish-restriction-end"}}
           </AuHelpText>
 
-          <AuAlert @icon="info-circle" @title={{t "timelineStep.publicationConsequences"}} @skin="info" @alertsize="small" class="au-u-margin-top au-u-margin-bottom-none">
-            <p>{{t "timelineStep.previewInfo"}}<a href="{{this.publicationBaseUrl}}" target="_blank" rel="noopener noreferrer" class="au-c-link">{{this.publicationBaseUrl}}</a>{{t "timelineStep.previewInfoEnd"}}</p>
+          <AuAlert @icon="info-circle" @title={{t "timeline-step.publication-consequences"}} @skin="info" @alertsize="small" class="au-u-margin-top au-u-margin-bottom-none">
+            <p>{{t "timeline-step.preview-info"}}<a href="{{this.publicationBaseUrl}}" target="_blank" rel="noopener noreferrer" class="au-c-link">{{this.publicationBaseUrl}}</a>{{t "timeline-step.preview-info-end"}}</p>
           </AuAlert>
 
           {{#unless this.isAgenda}}
-            <AuAlert @icon="info-circle" @title={{t "timelineStep.notifyConsequences"}} @skin="info" @alertsize="small" class="au-u-margin-top-tiny au-u-margin-bottom-none">
-              <p>{{t "timelineStep.notifyInfo"}}<a href="https://loket.lokaalbestuur.vlaanderen.be/" target="_blank" rel="noopener noreferrer" class="au-c-link">{{t "timelineStep.localLoket"}}</a>.</p>
+            <AuAlert @icon="info-circle" @title={{t "timeline-step.notify-consequences"}} @skin="info" @alertsize="small" class="au-u-margin-top-tiny au-u-margin-bottom-none">
+              <p>{{t "timeline-step.notify-info"}}<a href="https://loket.lokaalbestuur.vlaanderen.be/" target="_blank" rel="noopener noreferrer" class="au-c-link">{{t "timeline-step.local-loket"}}</a>.</p>
             </AuAlert>
           {{/unless}}
         </div>
