--- a/app/components/treatment/voting/edit.hbs
+++ b/app/components/treatment/voting/edit.hbs
@@ -4,37 +4,37 @@
   @size="fullscreen"
   @closeModal={{this.cancel}} as |Modal| >
   <Modal.Body>
-    <AuHeading @level="3" @skin="4">{{t "votingEdit.firstStepTitle"}}</AuHeading>
+    <AuHeading @level="3" @skin="4">{{t "voting-edit.first-step-title"}}</AuHeading>
     <AuHr />
     <div class="au-c-form">
       <p>
-        <AuLabel for="voting-subject">{{t "votingEdit.firstStepIntroduction"}}</AuLabel>
+        <AuLabel for="voting-subject">{{t "voting-edit.first-step-introduction"}}</AuLabel>
         <AuTextarea id="voting-subject" @width="block" @value={{this.editStemming.stemming.onderwerp}}></AuTextarea>
-        <AuHelpText @skin="secondary">{{t "votingEdit.firstStepExplanation"}}</AuHelpText>
+        <AuHelpText @skin="secondary">{{t "voting-edit.first-step-explanation"}}</AuHelpText>
       </p>
     </div>
 
-    <AuHeading @level="3" @skin="4" class="au-u-margin-top-large">{{t "votingEdit.secondStep"}}</AuHeading>
+    <AuHeading @level="3" @skin="4" class="au-u-margin-top-large">{{t "voting-edit.second-step"}}</AuHeading>
     <AuHr />
     <p>
-      {{!-- <AuControlCheckbox @label={{t "votingEdit.privateVotingCheckbox"}} @identifier="akkoord" @checked={{this.editStemming.stemming.geheim}} /> --}}
+      {{!-- <AuControlCheckbox @label={{t "voting-edit.private-voting-checkbox"}} @identifier="akkoord" @checked={{this.editStemming.stemming.geheim}} /> --}}
 
       <label class="au-c-label">
         <Input @type="checkbox" @checked={{this.editStemming.stemming.geheim}} />&nbsp;
-        {{t "votingEdit.privateVotingCheckbox"}}
+        {{t "voting-edit.private-voting-checkbox"}}
       </label>
     </p>
     <div>
       <Treatment::Voting::ManageVoters />
     </div>
 
-    <AuHeading @level="3" @skin="4" class="au-u-margin-top-large">{{t "votingEdit.thirdStep"}}</AuHeading>
+    <AuHeading @level="3" @skin="4" class="au-u-margin-top-large">{{t "voting-edit.third-step"}}</AuHeading>
     <AuHr />
     <div class="au-c-form au-u-padding-bottom">
       <p>
-        <AuLabel for="voting-consequence">{{t "votingEdit.thirdStepIntroduction"}}</AuLabel>
+        <AuLabel for="voting-consequence">{{t "voting-edit.third-step-introduction"}}</AuLabel>
         <AuTextarea id="voting-consequence" @width="block" @value={{this.editStemming.stemming.gevolg}}></AuTextarea>
-        <AuHelpText @skin="secondary">{{t "votingEdit.thirdStepExplanation"}}</AuHelpText>
+        <AuHelpText @skin="secondary">{{t "voting-edit.third-step-explanation"}}</AuHelpText>
       </p>
     </div>
   </Modal.Body>
@@ -42,19 +42,19 @@
     <AuToolbar as |Group|>
       <Group>
         <AuButton @skin="naked" {{on "click" this.cancel}}>
-          {{t "votingEdit.cancelButton"}}
+          {{t "voting-edit.cancel-button"}}
         </AuButton>
       </Group>
       <Group>
         <AuHelpText>
-          {{t "votingEdit.fourthStepExplanationPartOne"}}
+          {{t "voting-edit.fourth-step-explanation-part-one"}}
           <strong>
-            {{t "votingEdit.saveButton"}}
+            {{t "voting-edit.save-button"}}
           </strong>
-          {{t "votingEdit.fourthStepExplanationPartTwo"}}
+          {{t "voting-edit.fourth-step-explanation-part-two"}}
         </AuHelpText>
         <AuButton @loading={{@saving}} {{on "click" this.save}}>
-          {{t "votingEdit.saveButton"}}
+          {{t "voting-edit.save-button"}}
         </AuButton>
       </Group>
     </AuToolbar>
