--- a/app/components/zitting-text-document-container.hbs
+++ b/app/components/zitting-text-document-container.hbs
@@ -3,7 +3,7 @@
            @rdfaEditorInit={{this.rdfaEditorInit}}
            @editorOptions={{this.editorOptions}}
            @busy={{@saving}}
-           @busyText={{t "rdfaEditorContainer.saving"}}
+           @busyText={{t "rdfa-editor-container.saving"}}
            @prefix={{hash ext="http://mu.semte.ch/vocabularies/ext/"}}
            @property={{@type}}
            @schema={{this.schema}}
