--- a/app/templates/inbox/agendapoints/new.hbs
+++ b/app/templates/inbox/agendapoints/new.hbs
@@ -15,7 +15,7 @@
       <creator.form />
 
       {{#if creator.errorSaving}}
-        <AuAlert @icon="cross" @title={{t "inbox.agendapoints.new.errorSaving"}} @skin="error" @closable={{true}}>
+        <AuAlert @icon="cross" @title={{t "inbox.agendapoints.new.error-saving"}} @skin="error" @closable={{true}}>
           {{creator.errorSaving}}
         </AuAlert>
       {{/if}}
