--- a/app/templates/meetings/publish/agenda.hbs
+++ b/app/templates/meetings/publish/agenda.hbs
@@ -22,7 +22,7 @@
       />
   </ul>
   {{else}}
-    <AuHelpText @size="large">{{t "publish.loadingMessage"}}</AuHelpText>
+    <AuHelpText @size="large">{{t "publish.loading-message"}}</AuHelpText>
     <AuLoader @padding="small" />
   {{/if}}
 </div>
