--- a/app/templates/meetings/publish/besluitenlijst.hbs
+++ b/app/templates/meetings/publish/besluitenlijst.hbs
@@ -1,9 +1,9 @@
 <div class="au-o-box">
   {{#if this.initializeBesluitenLijst.isRunning}}
-    <AuHelpText @size="large">{{t "publish.loadingMessage"}}</AuHelpText>
+    <AuHelpText @size="large">{{t "publish.loading-message"}}</AuHelpText>
     <AuLoader @padding="small" />
   {{else if this.error}}
-    <AuAlert @icon="cross" @title={{t "publish.decisionListErrorMessage"}} @skin="error" @size="small">
+    <AuAlert @icon="cross" @title={{t "publish.decision-list-error-message"}} @skin="error" @size="small">
       <code>{{this.error}}</code>
     </AuAlert>
   {{else}}
