--- a/app/components/agenda-manager/agenda-table/empty.hbs
+++ b/app/components/agenda-manager/agenda-table/empty.hbs
@@ -1,7 +1,7 @@
 <tr>
   <td colspan="4">
     <AuHelpText @size="normal" @skin="tertiary">
-      {{t "manageAgendaZittingModal.noDataMessage"}}
+      {{t "manage-agenda-zitting-modal.no-data-message"}}
     </AuHelpText>
   </td>
 </tr>
