--- a/app/components/agendapoint-back-link.hbs
+++ b/app/components/agendapoint-back-link.hbs
@@ -1,7 +1,7 @@
 {{#if @meetingId}}
   <AuLink @route="meetings.edit" @model={{@meetingId}}>
     <AuIcon @icon="arrow-left" @alignment="left" />
-    {{t "agendapoint.backToMeeting" adminBody=this.administrativeBodyName date=(detailed-date this.meeting.geplandeStart)}}
+    {{t "agendapoint.back-to-meeting" adminBody=this.administrativeBodyName date=(detailed-date this.meeting.geplandeStart)}}
   </AuLink>
 {{else}}
   <AuLink @route="inbox.agendapoints" @skin="secondary">
