--- a/app/components/participation-list.hbs
+++ b/app/components/participation-list.hbs
@@ -1,35 +1,35 @@
 
 <div class="au-c-meeting-chrome-card au-u-margin-bottom-none">
-  <AuHeading @level="4" @skin="6" class="au-c-meeting-chrome-card__title">{{t "participationList.blockTitle"}}</AuHeading>
+  <AuHeading @level="4" @skin="6" class="au-c-meeting-chrome-card__title">{{t "participation-list.block-title"}}</AuHeading>
   <ul class="au-c-list-divider">
     <li class="au-c-list-divider__item">
-      {{t "participationList.voorzitterLabel"}} <strong>{{this.chairman.isBestuurlijkeAliasVan.fullName}}</strong>
+      {{t "participation-list.voorzitter-label"}} <strong>{{this.chairman.isBestuurlijkeAliasVan.fullName}}</strong>
       {{#unless this.chairman}}
         <AuPill @skin="warning" @icon="alert-triangle" @iconAlignment="left">
-          {{t "participationList.voorzitterError"}}
+          {{t "participation-list.voorzitter-error"}}
         </AuPill>
       {{/unless}}
     </li>
     <li class="au-c-list-divider__item">
-      {{t "participationList.secretarisLabel"}} <strong>{{this.secretary.isBestuurlijkeAliasVan.fullName}}</strong>
+      {{t "participation-list.secretaris-label"}} <strong>{{this.secretary.isBestuurlijkeAliasVan.fullName}}</strong>
       {{#unless this.secretary}}
         <AuPill @skin="warning" @icon="alert-triangle" @iconAlignment="left">
-          {{t "participationList.secretarisError"}}
+          {{t "participation-list.secretaris-error"}}
         </AuPill>
       {{/unless}}
     </li>
     <li class="au-c-list-divider__item">
-      {{t "participationList.presentLabel"}}
+      {{t "participation-list.present-label"}}
       {{#each this.participants as |mandataris|}}
         <strong>{{mandataris.isBestuurlijkeAliasVan.fullName}}</strong>,
       {{else}}
         <AuPill @skin="warning" @icon="alert-triangle" @iconAlignment="left">
-          {{t "participationList.presentError"}}
+          {{t "participation-list.present-error"}}
         </AuPill>
       {{/each}}
     </li>
     <li class="au-c-list-divider__item">
-      {{t "participationList.notPresentLabel"}}
+      {{t "participation-list.not-present-label"}}
       {{#each this.absentees as |mandataris|}}
         <strong>{{mandataris.isBestuurlijkeAliasVan.fullName}}</strong>,
       {{/each}}
