--- a/app/components/signatures/publication-confirmation.hbs
+++ b/app/components/signatures/publication-confirmation.hbs
@@ -1,5 +1,5 @@
 <AuModal
-  @title={{concat (t "publicationConfirmation.modalTitle") @name}}
+  @title={{concat (t "publication-confirmation.modal-title") @name}}
   @modalOpen={{true}}
   @size="fullscreen"
   @closeModal={{@cancel}}
@@ -9,26 +9,26 @@
       <div class="au-o-grid__item au-u-1-3 au-u-hide-on-print">
         <div class="au-c-rdfa-publication-aside">
           <div class="au-o-box">
-            <AuAlert @icon="info-circle" @title={{t "publicationConfirmation.alertFirstPart"}}  @skin="info" @alertSize="small">
-              <p>{{t "publicationConfirmation.alertSecondPart"}}<strong> {{t "publicationConfirmation.alertThirdPart"}}</strong> {{t "publicationConfirmation.alertFourthPart"}}</p>
+            <AuAlert @icon="info-circle" @title={{t "publication-confirmation.alert-first-part"}}  @skin="info" @alertSize="small">
+              <p>{{t "publication-confirmation.alert-second-part"}}<strong> {{t "publication-confirmation.alert-third-part"}}</strong> {{t "publication-confirmation.alert-fourth-part"}}</p>
             </AuAlert>
 
-            <AuHeading @level="2" @skin="6" class="au-u-margin-bottom-small">{{t "publicationConfirmation.publicationTitle"}}</AuHeading>
-            <p class="au-c-help-text au-c-help-text--large au-u-margin-bottom">{{t "publicationConfirmation.publicationSubtitle"}} <a href="{{this.publicationBaseUrl}}">{{this.publicationBaseUrl}}</a>.</p>
+            <AuHeading @level="2" @skin="6" class="au-u-margin-bottom-small">{{t "publication-confirmation.publication-title"}}</AuHeading>
+            <p class="au-c-help-text au-c-help-text--large au-u-margin-bottom">{{t "publication-confirmation.publication-subtitle"}} <a href="{{this.publicationBaseUrl}}">{{this.publicationBaseUrl}}</a>.</p>
 
-            <AuHeading @level="2" @skin="6" class="au-u-margin-bottom-small">{{t "publicationConfirmation.reportingTitle"}}</AuHeading>
-            <p class="au-c-help-text au-c-help-text--large au-u-margin-bottom">{{t "publicationConfirmation.reportingSubtitle"}} <a href="https://loket.lokaalbestuur.vlaanderen.be/" target="_blank" rel="noopener noreferrer" class="au-c-link">{{t "publicationConfirmation.reportingLink"}}</a>.</p>
+            <AuHeading @level="2" @skin="6" class="au-u-margin-bottom-small">{{t "publication-confirmation.reporting-title"}}</AuHeading>
+            <p class="au-c-help-text au-c-help-text--large au-u-margin-bottom">{{t "publication-confirmation.reporting-subtitle"}} <a href="https://loket.lokaalbestuur.vlaanderen.be/" target="_blank" rel="noopener noreferrer" class="au-c-link">{{t "publication-confirmation.reporting-link"}}</a>.</p>
 
-            <AuHeading @level="2" @skin="6" class="au-u-margin-bottom-small">{{t "publicationConfirmation.metadataTitle"}}</AuHeading>
+            <AuHeading @level="2" @skin="6" class="au-u-margin-bottom-small">{{t "publication-confirmation.metadata-title"}}</AuHeading>
 
             <ul>
               <li>
-                <p class="au-c-help-text au-c-help-text--secondary au-c-help-text--normal">{{t "publicationConfirmation.publisherLabel"}}</p>
+                <p class="au-c-help-text au-c-help-text--secondary au-c-help-text--normal">{{t "publication-confirmation.publisher-label"}}</p>
                 <p class="au-c-help-text au-c-help-text--large">{{this.currentSession.user.fullName}}</p>
               </li>
               <li class="au-u-margin-top-small">
-                <p class="au-c-help-text au-c-help-text--secondary au-c-help-text--normal">{{t "publicationConfirmation.dateAndTimeLabel"}}</p>
-                <p class="au-c-help-text au-c-help-text--large">{{t "publicationConfirmation.dateAndTimeMessage"}}</p>
+                <p class="au-c-help-text au-c-help-text--secondary au-c-help-text--normal">{{t "publication-confirmation.date-and-time-label"}}</p>
+                <p class="au-c-help-text au-c-help-text--large">{{t "publication-confirmation.date-and-time-message"}}</p>
               </li>
             </ul>
           </div>
@@ -50,10 +50,10 @@
   <Modal.Footer>
     <AuToolbar class="au-u-hide-on-print" as |Group|>
       <Group>
-        <AuButton @skin="naked" {{on "click" @cancel}}>{{t "publicationConfirmation.cancelButton"}}</AuButton>
+        <AuButton @skin="naked" {{on "click" @cancel}}>{{t "publication-confirmation.cancel-button"}}</AuButton>
       </Group>
       <Group>
-        <AuButton {{on "click" @confirm}}>{{concat (t "publicationConfirmation.confirmButton") @name}}</AuButton>
+        <AuButton {{on "click" @confirm}}>{{concat (t "publication-confirmation.confirm-button") @name}}</AuButton>
       </Group>
     </AuToolbar>
   </Modal.Footer>
