--- a/app/components/treatment/voting/manage-voters.hbs
+++ b/app/components/treatment/voting/manage-voters.hbs
@@ -1,10 +1,10 @@
 {{#if this.editStemming.stemming.geheim}}
 <div class="au-u-margin-top au-u-margin-bottom">
-  <AuHeading @level="4" @skin="5">{{t "votingManageVoting.subtitle"}}</AuHeading>
+  <AuHeading @level="4" @skin="5">{{t "voting-manage-voting.subtitle"}}</AuHeading>
   <div class="au-o-grid">
     <div class="au-o-grid__item au-u-1-3">
       <AuLabel for="amount-pro">
-        {{t "votingModal.aantalVoorstandersLabel"}}
+        {{t "voting-modal.aantal-voorstanders-label"}}
       </AuLabel>
       <Input id="amount-pro" class="au-c-input au-c-input--block" placeholder="0" @type="number"
         @value={{this.editStemming.stemming.aantalVoorstanders}} min="0"
@@ -12,7 +12,7 @@
     </div>
     <div class="au-o-grid__item au-u-1-3">
       <AuLabel for="amount-con">
-        {{t "votingModal.aantalTegenstandersLabel"}}
+        {{t "voting-modal.aantal-tegenstanders-label"}}
       </AuLabel>
       <Input id="amount-con" class="au-c-input au-c-input--block" placeholder="0" @type="number"
         @value={{this.editStemming.stemming.aantalTegenstanders}} min="0"
@@ -20,7 +20,7 @@
     </div>
     <div class="au-o-grid__item au-u-1-3">
       <AuLabel for="amount-none">
-        {{t "votingModal.aantalOnthoudersLabel"}}
+        {{t "voting-modal.aantal-onthouders-label"}}
       </AuLabel>
       <Input id="amount-none" class="au-c-input au-c-input--block" placeholder="0" @type="number"
         @value={{this.editStemming.stemming.aantalOnthouders}} min="0"
@@ -35,21 +35,21 @@
     @icon="check"
     @iconAlignment="left"
     @skin="secondary"
-    {{on "click" this.editStemming.setUnaniemVoorstander}}>{{t "votingManageVoting.setUnaniemVoorstanderButton"}}
+    {{on "click" this.editStemming.setUnaniemVoorstander}}>{{t "voting-manage-voting.set-unaniem-voorstander-button"}}
   </AuButton>
 
   <AuButton
     @icon="cross"
     @iconAlignment="left"
     @skin="secondary"
-    {{on "click" this.editStemming.setUnaniemTegenstander}}>{{t "votingManageVoting.setUnaniemTegenstanderButton"}}
+    {{on "click" this.editStemming.setUnaniemTegenstander}}>{{t "voting-manage-voting.set-unaniem-tegenstander-button"}}
   </AuButton>
 
   <AuButton
     @icon="user"
     @iconAlignment="left"
     @skin="secondary"
-    {{on "click" this.editStemming.setUnaniemOnthouder}}>{{t "votingManageVoting.setUnaniemOnthouderButton"}}
+    {{on "click" this.editStemming.setUnaniemOnthouder}}>{{t "voting-manage-voting.set-unaniem-onthouder-button"}}
   </AuButton>
 </AuButtonGroup>
 
