--- a/app/templates/inbox/irg-archive.hbs
+++ b/app/templates/inbox/irg-archive.hbs
@@ -1,4 +1,4 @@
-{{page-title (t "inbox.irgArchive.pageTitle")}}
+{{page-title (t "inbox.irg-archive.page-title")}}
 
 <AuDataTable @content={{this.model}} @isLoading={{this.isLoadingModel}} @noDataMessage='' @sort={{this.sort}} @page={{this.page}} @size={{this.size}} as |table|>
   <table.menu as |menu|>
@@ -6,23 +6,23 @@
       <AuToolbar class="au-o-box" @size="large" as |Group|>
         <Group class="au-c-toolbar__group--vertical">
           <AuHeading @skin="2">
-            {{t 'inbox.irgArchive.pageTitle'}}
+            {{t 'inbox.irg-archive.page-title'}}
           </AuHeading>
           <AuHeading @skin="5">
-            {{t 'inbox.irgArchive.pageSubTitle'}}
+            {{t 'inbox.irg-archive.page-subtitle'}}
           </AuHeading>
         </Group>
         <Group class="au-c-toolbar__group--center">
-          <AuInput @icon="search" @iconAlignment="right" @width="block" @value={{this.searchValue}} placeholder={{t 'inbox.irgArchive.searchPlaceholder'}} {{on "input" (perform this.updateFilter)}}/>
+          <AuInput @icon="search" @iconAlignment="right" @width="block" @value={{this.searchValue}} placeholder={{t 'inbox.irg-archive.search-placeholder'}} {{on "input" (perform this.updateFilter)}}/>
         </Group>
       </AuToolbar>
     </menu.general>
   </table.menu>
   <table.content as |c|>
     <c.header>
-      <AuDataTableThSortable @field=":no-case:currentVersion.title" @currentSorting={{this.sort}} @label={{t 'inbox.irgArchive.titleLabel'}} />
-      <AuDataTableThSortable @field="currentVersion.type.label" @currentSorting={{this.sort}} @label={{t 'inbox.irgArchive.typeLabel'}} />
-      <AuDataTableThSortable @field ="currentVersion.identifier" @currentSorting={{this.sort}} @label={{t 'inbox.irgArchive.identifierLabel'}} />
+      <AuDataTableThSortable @field=":no-case:currentVersion.title" @currentSorting={{this.sort}} @label={{t 'inbox.irg-archive.title-label'}} />
+      <AuDataTableThSortable @field="currentVersion.type.label" @currentSorting={{this.sort}} @label={{t 'inbox.irg-archive.type-label'}} />
+      <AuDataTableThSortable @field ="currentVersion.identifier" @currentSorting={{this.sort}} @label={{t 'inbox.irg-archive.identifier-label'}} />
     </c.header>
     <c.body as |container|>
       <td>
