--- a/app/templates/inbox/regulatory-statements.hbs
+++ b/app/templates/inbox/regulatory-statements.hbs
@@ -1,9 +1,9 @@
-{{page-title (t "inbox.regulatoryStatements.pageTitle")}}
+{{page-title (t "inbox.regulatory-statements.page-title")}}
 <SnippetsNotifier/>
 
 <AuDataTable @content={{this.model}}
              @isLoading={{this.isLoadingModel}}
-             @noDataMessage={{t 'inbox.regulatoryStatements.noDataMessage'}}
+             @noDataMessage={{t 'inbox.regulatory-statements.no-data-message'}}
              @sort={{this.sort}}
              @page={{this.page}}
              @size={{this.pageSize}}
@@ -13,7 +13,7 @@
       <AuToolbar class="au-o-box" @size="large" as |Group|>
         <Group>
           <AuHeading @skin="2">
-            {{t 'inbox.regulatoryStatements.pageTitle'}}
+            {{t 'inbox.regulatory-statements.page-title'}}
           </AuHeading>
         </Group>
         <Group class="au-c-toolbar__group--center">
@@ -22,13 +22,13 @@
             @icon="search"
             @iconAlignment="right"
             @value={{this.searchValue}}
-            placeholder={{t 'inbox.regulatoryStatements.searchPlaceholder'}}
+            placeholder={{t 'inbox.regulatory-statements.search-placeholder'}}
           />
           {{#unless this.readOnly}}
             <AuLink
               @route="inbox.regulatory-statements.new"
               @skin="button" @icon="add" @iconAlignment="left">
-              {{t "inbox.regulatoryStatements.new.title"}}
+              {{t "inbox.regulatory-statements.new.title"}}
             </AuLink>
           {{/unless}}
         </Group>
@@ -38,11 +38,11 @@
   <table.content as |c|>
     <c.header>
       <AuDataTableThSortable @field=":no-case:currentVersion.title" @currentSorting={{this.sort}} @label={{t
-        'inbox.regulatoryStatements.titleLabel'}} />
+        'inbox.regulatory-statements.title-label'}} />
       <AuDataTableThSortable @field="currentVersion.updatedOn" @currentSorting={{this.sort}} @label={{t
-        'inbox.regulatoryStatements.updatedOnLabel'}} />
+        'inbox.regulatory-statements.updated-on-label'}} />
       <AuDataTableThSortable @field=":no-case:currentVersion.status.label" @currentSorting={{this.sort}} @label={{t
-        'inbox.regulatoryStatements.statusLabel'}} />
+        'inbox.regulatory-statements.status-label'}} />
       <th/>
     </c.header>
     <c.body as |container|>
