--- a/app/templates/meetings/edit/outro.hbs
+++ b/app/templates/meetings/edit/outro.hbs
@@ -1,6 +1,6 @@
 <AuModal @modalOpen={{true}}
          @size="fullscreen"
-         @title={{t "meetingForm.sixthSectionTitle"}}
+         @title={{t "meeting-form.sixth-section-title"}}
          @closeModal={{this.closeModal}}
          class="au-c-modal--editor"
          as |Modal|>
@@ -25,9 +25,9 @@
         {{t "meetings.edit.outro.save"}}
       </AuButton>
       <AuButton @disabled={{this.saveTextTask.isRunning}} {{on "click" this.saveAndQuit}}>
-        {{t "meetings.edit.outro.saveAndQuit"}}
+        {{t "meetings.edit.outro.save-and-quit"}}
       </AuButton>
     </AuButtonGroup>
   </Modal.Footer>
 </AuModal>
-<ConfirmRouteLeave @enabled={{this.dirty}} @message={{t "meetings.edit.outro.confirmQuitWithoutSaving"}}/>
+<ConfirmRouteLeave @enabled={{this.dirty}} @message={{t "meetings.edit.outro.confirm-quit-without-saving"}}/>
