--- a/app/templates/meetings/publish.hbs
+++ b/app/templates/meetings/publish.hbs
@@ -2,9 +2,9 @@
   <AuToolbar @size="small" class="au-u-padding-top-none au-u-padding-bottom-none" as |Group|>
     <Group>
       <AuLink @route="meetings.edit" @model={{@model.id}} @skin="secondary" @icon="arrow-left" @iconAlignment="left">
-        {{t "publish.backToMeeting"}}
+        {{t "publish.back-to-meeting"}}
       </AuLink>
-      <span class="au-c-app-chrome__entity">{{t "publish.headingPartOne"}} {{detailed-date this.model.geplandeStart}}</span>
+      <span class="au-c-app-chrome__entity">{{t "publish.heading-part-one"}} {{detailed-date this.model.geplandeStart}}</span>
     </Group>
     <Group>
       <AuDropdown @title="{{this.currentSession.user.voornaam}} {{this.currentSession.user.achternaam}} - {{this.currentSession.group.classificatie.label}} {{this.currentSession.group.naam}}" @buttonLabel="Account settings" @alignment="right">
