--- a/app/templates/meetings/publish/uittreksels/index.hbs
+++ b/app/templates/meetings/publish/uittreksels/index.hbs
@@ -1,5 +1,5 @@
 <AuDataTable @content={{this.model}}
-             @noDataMessage={{t "publish.noExcerptsMessage"}}
+             @noDataMessage={{t "publish.no-excerpts-message"}}
              @sort={{this.sort}}
              @page={{this.page}}
              @size={{this.pageSize}}
@@ -13,7 +13,7 @@
           </AuHeading>
         </Group>
         <Group class="au-u-hide-on-print">
-          <TextSearch @wait={{2000}} @filter={{this.title}} @placeholder={{t 'inbox.agendapoints.searchPlaceholder'}} />
+          <TextSearch @wait={{2000}} @filter={{this.title}} @placeholder={{t 'inbox.agendapoints.search-placeholder'}} />
         </Group>
       </AuToolbar>
     </menu.general>
@@ -22,7 +22,7 @@
     <c.header>
       <AuDataTableThSortable @field="position" @currentSorting={{this.sort}} @label={{t 'publish.position'}} />
       <AuDataTableThSortable @field=":no-case:titel" @currentSorting={{this.sort}} @label={{t 'publish.agendapoint'}} />
-      <AuDataTableThSortable @field="behandeling.documentContainer.status" @currentSorting={{this.sort}} @label={{t 'publish.statusLabel'}} />
+      <AuDataTableThSortable @field="behandeling.documentContainer.status" @currentSorting={{this.sort}} @label={{t 'publish.status-label'}} />
       <th></th>
     </c.header>
 
@@ -32,7 +32,7 @@
       <td>
         <Signatures::PublicationStatus @versionedResource={{agendapoint.behandeling.versionedBehandeling}} />
       </td>
-      <td class="au-u-text-right"><AuLink @route="meetings.publish.uittreksels.show" @model={{agendapoint.behandeling.id}} @skin="button" @icon="arrow-right" @iconAlignment="right" class="au-u-hide-on-print">{{t 'publish.publishButtonLabel'}}</AuLink></td>
+      <td class="au-u-text-right"><AuLink @route="meetings.publish.uittreksels.show" @model={{agendapoint.behandeling.id}} @skin="button" @icon="arrow-right" @iconAlignment="right" class="au-u-hide-on-print">{{t 'publish.publish-button-label'}}</AuLink></td>
     </c.body>
   </table.content>
 </AuDataTable>
